# sa2

./: .gitignore  INSTALL.md  Makefile  config.mk  ldscript.txt
sa1/: .gitignore  CMakeLists.txt  Makefile  config.mk  ldscript.txt  songs.mk  sym_iwram.txt
sa1/android/: .gitignore  README.md  settings.gradle
sa1/android/app/: build.gradle
sa1/android/app/jni/: CMakeLists.txt
sa1/android/app/src/main/: AndroidManifest.xml
sa1/asm/macros/: portable.inc
sa1/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  preproc
sa1/build_cmake/asm/data/sa1/: build_info.s.S  data1.s.S  data1_1.s.S
sa1/build_debug/: CMakeCache.txt  Makefile  assets.stamp  cmake_install.cmake  preproc
sa1/build_sdl/: CMakeCache.txt  Makefile  cmake_install.cmake  preproc
sa1/build_sdl/asm/data/sa1/: chao_garden.s.S
sa1/cmake/: generate_assets.cmake  run_asm.cmake  run_preproc.cmake
sa1/data/: chao_garden.s  data1.s  data_0_1_4.s  data_0_3.s  data_0_3_2.s  data_0_6_0.s  obj_gfx.s
sa1/data/sa1/: data1.s  data1_1.s  data_0_1_2.s  data_0_2.s  data_0_3.s  data_0_3_2.s  data_0_4.s  data_0_5.s  data_0_5_0.s  data_0_5_2.s  data_0_6.s  data_0_6_1.s  data_0_6_2.s  data_0_7.s  data_sound_test.s  obj_gfx.s  rom_header_old.s  sound_data.s
sa1/graphics/sa1/: obj_tiles_4bpp.inc  obj_tiles_8bpp.inc
sa1/graphics/sa1/tilemaps/egg_rocket_clouds/: header.c
sa1/graphics/sa1/tilemaps/ice_paradise_snow/: header.c
sa1/graphics/sa1/tilemaps/intro_created_by_sonic_team/: header.c
sa1/graphics/sa1/tilemaps/intro_presented_by_sega/: header.c
sa1/graphics/sa1/tilemaps/mp_choose_pak_type_en/: header.c
sa1/graphics/sa1/tilemaps/mp_choose_pak_type_jp/: header.c
sa1/graphics/sa1/tilemaps/mp_connection_error/: header.c
sa1/graphics/sa1/tilemaps/mp_connection_success/: header.c
sa1/graphics/sa1/tilemaps/mp_continue_screen/: header.c
sa1/include/: core.h  multi_sio.h  sio32_multi_load.h  sprite.h
sa1/include/constants/: animations.h  char_states.h  move_states.h  zones.h
sa1/include/data/sa1/: sprite_data.h
sa1/include/game/: entity.h  gTask_03006240.h  globals.h  options_screen.h
sa1/include/game/enemies/: boss_xtra_super_egg_robo.h
sa1/include/game/multiplayer/: chao.h
sa1/include/game/sa1/: save.h
sa1/include/game/sa1_sa2_shared/: collision.h
sa1/include/game/stage/: camera.h
sa1/include/game/types/: entity.h
sa1/include/gba/: defines.h
sa1/include/platform/: platform.h
sa1/scripts/: disasm.cfg  extract_credits_data.py  extract_rom_data.py  extract_ui_graphics_data.py
sa1/scripts/sound/: SoundDumper.cs  edit_time_signature.py  extract_songs_info.py  extract_songs_info_chao_garden.py  extract_sound_samples.py  extract_voicegroups.py  fix_song_names.py  match_next_midi.py  match_next_midi_chao_garden.py  name_songs.py  update_unmatched_songs.py
sa1/sound/: direct_sound_data.inc  programmable_wave_data.inc
sa1/sound/sa1/: direct_sound_data.inc  programmable_wave_data.inc  voice_groups.inc
sa1/src/: sprite.c
sa1/src/data/: tilemap_data_3.c
sa1/src/data/sa1/: credits.c  entities.c  entity_tables.c  oam_data.c  obj_palettes.c  sprite_dimensions.c  sprite_tables.c  tilemap_data_0.c  tilemap_data_2.c  tilemap_data_3.c  tilemap_table.c  tilemaps_special_stage.c  tileset_debug_ascii.c  ui_graphics_data.c  ui_graphics_table.c
sa1/src/game/: amy_attack_heart_effect.c  character_select.c  collect_chaos_emeralds_msg.c  course_select.c  demo_manager.c  edit_language_screen.c  egg_rocket_transitions.c  extra_stage_results.c  game.c  game_2_1.c  game_2_3.c  game_over.c  mp_chao.c  mystery_itembox.c  nuts_and_bolts_task.c  options_menu.c  player_data_menu.c  player_name_input_menu.c  some_task_manager.c  sound_test.c  staff_credits.c  time_attack_record.c  title_screen.c  vs_record.c  water_effects.c
sa1/src/game/enemies/: boss_1_egg_hammer_tank.c  boss_2_egg_press.c  boss_3_egg_ball.c  boss_4_egg_spider.c  boss_5_mecha_knuckles.c  boss_6_egg_snake.c  boss_x1_egg_wrecker.c  boss_x2_egg_drillster.c  boss_x3_egg_x.c  boss_xtra_super_egg_robot.c  bosses_egg_mobile.c  bosses_misc.c  buzzer.c  gamigami.c  hanabii.c  kerokero.c  kiki.c  leon.c  mirror.c  pen_mk1.c  pierrot.c  rhinotank.c  senbon.c  slot.c  tentou.c  wamu.c  yukimaru.c
sa1/src/game/interactables/: 034.c  096.c  107.c  113.c  air_bubbles.c  booster.c  boulder_spawner.c  bounce_block.c  bowl.c  breakable_wall.c  bumpers.c  carousel.c  checkpoint.c  conveyor_belt_movement.c  conveyor_belt_object.c  crane_claw_and_lift.c  decoration.c  ferris_wheel.c  flipper_small_blue.c  flippers.c  forced_slide.c  grind_rail.c  half_pipe.c  hang_bar.c  hook_rail.c  ice_block.c  incline_ramp.c  iron_ball.c  lava.c  marble_track.c  maze_air_corner.c  mini_loop_boost.c  moving_spring.c  panel_gate.c  party_balloon.c  pipe.c  platform_crumbling.c  platform_spiked.c  platform_square.c  platform_thin.c  (+27 more)
sa1/src/game/multiplayer/: chao_message.c  communication_outcome.c  continue_screen.c  finish.c  hud.c  indicators.c  mode_select.c  mode_select_2.c  mp_player.c  multiplayer_event_mgr.c  multiplayer_event_recv_mgr.c  results.c  results_2.c  results_b.c  unk_0.c  unk_1.c
sa1/src/game/sa1/: mystery_itembox.c  save.c  title_screen.c
sa1/src/game/sa1_sa2_shared/: collect_ring_effect.c  collision.c  collision_0.c  demo_manager.c  entities_manager.c  itembox.c  magnetic_ring.c  music_manager.c  pause_menu.c  rings_manager.c  spot_lights_manager.c  unused_level_select.c
sa1/src/game/shared/: amy_attack_heart_effect.c  collect_ring_effect.c  demo_manager.c  palette_loader.c
sa1/src/game/special_stage/: game_2_0.c  intro.c  main.c
sa1/src/game/stage/: camera.c  camera_destroy.c  dust_effect_spindash.c  item_tasks.c  mp_sprite_task.c  player.c  player_amy.c  player_controls.c  player_knuckles.c  player_sonic.c  player_super_sonic.c  player_tails.c  results.c  rings_scatter.c  screen_shake.c  stage.c  terrain_collision.c  trapped_animals.c  ui.c  ui_z.c  underwater_effects.c
sa1/src/game/time_attack/: lobby.c  menu.c  records.c  results.c
sa1/src/platform/pret_sdl/: sdl2.c
sa1/src/platform/win32/: win32.c
(+1049 files in other folders)
